<resources>
    <string name="app_name">聊天</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">登录</string>

    <!-- Strings related to login -->
    <string name="prompt_username">请输入用户名</string>
    <string name="prompt_password">请输入密码</string>
    <string name="prompt_password1">请再次输入密码</string>
    <string name="prompt_nickname">请输入昵称</string>
    <string name="prompt_mobile">请输入手机号码</string>
    <string name="prompt_email">请输入邮箱地址</string>
    <string name="prompt_age">请输入您的年龄</string>


    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_home_page">首页</string>
    <string name="title_activity_register">注册</string>
    <string name="title_activity_forgetpass">忘记密码?</string>
    <string name="register_succeed">注册成功</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_a">AActivit</string>
    <string name="title_activity_addition">AdditionActivity</string>
    <string name="title_activity_user_info">UserInfoActivityActivity</string>
    <string name="title_activity_chat">ChatActivity</string>

    <string name="voice_up_tips">手指上滑,取消发送</string>
    <string name="voice_cancel_tips">松开手指，取消发送</string>
    <string name="voice_seconds_tips">还可以说%1$s秒</string>
    <string name="voice_short_tips">录音时间太短</string>
    <string name="agree">接受</string>
    <string name="new_friend">新的朋友</string>

    <string name="chat">聊天</string>
    <string name="add_friend">添加好友</string>

    <string name="set_notify">接收新消息通知</string>
    <string name="set_myinfo">个人资料</string>
    <string name="set_blacklist">黑名单</string>
    <string name="set_voice">声音</string>
    <string name="set_vibrate">震动</string>
    <string name="logout">退出登陆</string>

    <string name="longclick_speak">长按说话</string>
    <string name="picture">照片</string>
    <string name="camera">拍摄</string>
    <string name="location">位置</string>
    <string name="title_activity_new_friend">NewFriendActivity</string>

</resources>
