<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:to="http://schemas.android.com/apk/res/com.personage.myolq"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              >
    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/edit_paddleft"
        android:hint="@string/prompt_username"
        android:maxLength="18"
        android:textSize="@dimen/text_showsize"

        />
    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/edit_paddleft"
        android:hint="@string/prompt_password"
        android:maxLength="18"
        android:textSize="@dimen/text_showsize"

        />
    <EditText
        android:id="@+id/et_password1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/edit_paddleft"
        android:hint="@string/prompt_password1"
        android:maxLength="18"
        android:textSize="@dimen/text_showsize"

        />
    <EditText
        android:id="@+id/et_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/edit_paddleft"
        android:hint="@string/prompt_nickname"
        android:maxLength="18"
        android:textSize="@dimen/text_showsize"

        />
    <EditText
        android:id="@+id/et_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/edit_paddleft"
        android:hint="@string/prompt_mobile"
        android:maxLength="18"
        android:textSize="@dimen/text_showsize"

        />
    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/edit_paddleft"
        android:hint="@string/prompt_email"
        android:maxLength="18"
        android:textSize="@dimen/text_showsize"

        />
    <EditText
        android:id="@+id/et_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/edit_paddleft"
        android:hint="@string/prompt_age"
        android:maxLength="18"
        android:textSize="@dimen/text_showsize"

        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="性别："
            android:textSize="@dimen/text_showsize"
            android:layout_marginLeft="@dimen/edit_paddleft"
            />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            >
            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/radio_man"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="男"
                android:textColor="@color/radio_textcolor"
                android:textSize="@dimen/text_showsize"
                />
            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/radio_woman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="女"
                android:textColor="@color/radio_textcolor"
                android:textSize="@dimen/text_showsize"
                android:layout_marginLeft="30dp"
                />
        </RadioGroup>
    </LinearLayout>
    <com.example.widget.rippleclick.Click_Text
        android:id="@+id/click_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="@dimen/text_padd"
        android:layout_marginRight="@dimen/text_padd"
        to:text="确认"
        >

    </com.example.widget.rippleclick.Click_Text>

</LinearLayout>
